# genetic-algorithm

./: .gitignore  CHANGELOG.md  Makefile  README.md  default.nix  genetic-algorithm.cabal
src/: GA.hs
src/GA/: Core.hs  Individual.hs  Types.hs  Utilities.hs
