cabal-version:       2.4

name:                genetic-algorithm
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joris Sparreboom
maintainer:          jlssparreboom@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:  GA
  other-modules:    GA.Core
                  , GA.Types
                  , GA.Utilities
  -- other-extensions:
  build-depends:     base >=4.7 && < 5
                   , random >= 1.1
                   , mtl >= 2.2
  hs-source-dirs:    src
  default-language:  Haskell2010

-- executable GA
--   main-is: Main.hs
--   build-depends: base, genetic-algorithm
--   ghc-options: -Wall -fno-warn-unused-do-bind
--   default-language:  Haskell2010
